tests/neg/effects-match-1.scala
class Foo {
  Effect.canThrowNPE match { // error
    case _: Pure => ()
  }
}
